--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
   "homepage": "https://angular.app.sbb.ch",
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
-    "@angular/animations": "16.2.7",
-    "@angular/cdk": "16.2.6",
-    "@angular/common": "16.2.7",
-    "@angular/core": "16.2.7",
-    "@angular/elements": "16.2.7",
-    "@angular/forms": "16.2.7",
-    "@angular/platform-browser": "16.2.7",
-    "@angular/platform-browser-dynamic": "16.2.7",
-    "@angular/platform-server": "16.2.7",
-    "@angular/router": "16.2.7",
+    "@angular/animations": "17.0.0-next.4",
+    "@angular/cdk": "17.0.0-next.4",
+    "@angular/common": "17.0.0-next.4",
+    "@angular/core": "17.0.0-next.4",
+    "@angular/elements": "17.0.0-next.4",
+    "@angular/forms": "17.0.0-next.4",
+    "@angular/platform-browser": "17.0.0-next.4",
+    "@angular/platform-browser-dynamic": "17.0.0-next.4",
+    "@angular/platform-server": "17.0.0-next.4",
+    "@angular/router": "17.0.0-next.4",
     "@stackblitz/sdk": "1.9.0",
     "maplibre-gl": "2.4.0",
     "rxjs": "7.8.1",
@@ -68,17 +68,17 @@
   },
   "devDependencies": {
     "@actions/cache": "3.2.2",
-    "@angular-devkit/build-angular": "16.2.4",
-    "@angular-devkit/core": "16.2.4",
-    "@angular-devkit/schematics": "16.2.4",
-    "@angular-devkit/schematics-cli": "16.2.4",
+    "@angular-devkit/build-angular": "17.0.0-next.4",
+    "@angular-devkit/core": "17.0.0-next.4",
+    "@angular-devkit/schematics": "17.0.0-next.4",
+    "@angular-devkit/schematics-cli": "17.0.0-next.4",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#bac9c1abe1e6ac1801fbbccb53353a1ed7126469",
-    "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#12c559440ab7e9dfe10cab60ef09b1040fce41b1",
-    "@angular/cli": "16.2.4",
-    "@angular/compiler": "16.2.7",
-    "@angular/compiler-cli": "16.2.7",
-    "@angular/language-service": "16.2.7",
-    "@angular/localize": "16.2.7",
+    "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#b88792a3059b17ea0a3cfbacf622d4bff5dfe91f",
+    "@angular/cli": "17.0.0-next.4",
+    "@angular/compiler": "17.0.0-next.4",
+    "@angular/compiler-cli": "17.0.0-next.4",
+    "@angular/language-service": "17.0.0-next.4",
+    "@angular/localize": "17.0.0-next.4",
     "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#cc96f9ce0eac3fa7fbf569404358fa04b975947c",
     "@babel/core": "7.23.0",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
@@ -99,7 +99,7 @@
     "@rollup/plugin-commonjs": "23.0.4",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "11.1.4",
-    "@schematics/angular": "16.2.4",
+    "@schematics/angular": "17.0.0-next.4",
     "@types/browser-sync": "2.27.1",
     "@types/events": "3.0.1",
     "@types/fs-extra": "11.0.2",
@@ -166,14 +166,14 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "5.1.3",
+    "typescript": "5.2.2",
     "yargs": "17.7.2"
   },
   "resolutions": {
-    "@angular/build-tooling/typescript": "5.1.3",
-    "@angular/ng-dev/typescript": "5.1.3",
+    "@angular/build-tooling/typescript": "5.2.2",
+    "@angular/ng-dev/typescript": "5.2.2",
     "browser-sync-client": "2.26.13",
-    "dgeni-packages/typescript": "5.1.3"
+    "dgeni-packages/typescript": "5.2.2"
   },
   "standard-version": {
     "types": [
