--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "_shortcuts": "Below are shortcuts for common commands",
     "baz": "yarn -s generate:bazel",
     "sym": "yarn -s generate:symbols",
-    "integrity": "npm-run-all --sequential baz build:schematics sym format build:i18n generate:icon-list"
+    "integrity": "npm-run-all --sequential baz build:schematics sym format build:i18n"
   },
   "repository": {
     "type": "git",
