--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sbb-angular",
-  "version": "17.0.0-rc.0",
+  "version": "17.0.0",
   "private": true,
   "engines": {
     "node": ">=14.0.0 <19.0.0",
