chore(deps): update stackblitz maplibre-gl to v3.6.2
dev sbb angular stackblitz version 17.0.0

--- a/src/showcase/assets/stack-blitz/package.json
+++ b/src/showcase/assets/stack-blitz/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "@sbb-esta/angular": "${version}",
     "@sbb-esta/journey-maps": "${version}",
+    "maplibre-gl": "3.6.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
