build: update to TypeScript 5.3
Updates the project to the next Angular release and TypeScript 5.3.

--- a/package.json
+++ b/package.json
@@ -51,35 +51,35 @@
   "homepage": "https://angular.app.sbb.ch",
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
-    "@angular/animations": "17.0.8",
+    "@angular/animations": "17.1.0-next.5",
     "@angular/cdk": "17.0.4",
-    "@angular/common": "17.0.8",
-    "@angular/core": "17.0.8",
-    "@angular/elements": "17.0.8",
-    "@angular/forms": "17.0.8",
-    "@angular/platform-browser": "17.0.8",
-    "@angular/platform-browser-dynamic": "17.0.8",
-    "@angular/platform-server": "17.0.8",
-    "@angular/router": "17.0.8",
+    "@angular/common": "17.1.0-next.5",
+    "@angular/core": "17.1.0-next.5",
+    "@angular/elements": "17.1.0-next.5",
+    "@angular/forms": "17.1.0-next.5",
+    "@angular/platform-browser": "17.1.0-next.5",
+    "@angular/platform-browser-dynamic": "17.1.0-next.5",
+    "@angular/platform-server": "17.1.0-next.5",
+    "@angular/router": "17.1.0-next.5",
     "@stackblitz/sdk": "1.9.0",
     "maplibre-gl": "3.6.2",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
-    "zone.js": "0.13.1"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
     "@actions/cache": "3.2.2",
-    "@angular-devkit/build-angular": "17.0.9",
-    "@angular-devkit/core": "17.0.9",
-    "@angular-devkit/schematics": "17.0.9",
+    "@angular-devkit/build-angular": "17.1.0-rc.0",
+    "@angular-devkit/core": "17.1.0-rc.0",
+    "@angular-devkit/schematics": "17.1.0-rc.0",
     "@angular-devkit/schematics-cli": "17.0.9",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#bac9c1abe1e6ac1801fbbccb53353a1ed7126469",
     "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#9adea35cd6d69678eed81acbac6d1e207a29d4bd",
     "@angular/cli": "17.0.9",
-    "@angular/compiler": "17.0.8",
-    "@angular/compiler-cli": "17.0.8",
-    "@angular/language-service": "17.0.8",
-    "@angular/localize": "17.0.8",
+    "@angular/compiler": "17.1.0-next.5",
+    "@angular/compiler-cli": "17.1.0-next.5",
+    "@angular/language-service": "17.1.0-next.5",
+    "@angular/localize": "17.1.0-next.5",
     "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#66796b982c0b7159e608f14eb13b2a850448b530",
     "@babel/core": "7.23.7",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
@@ -118,7 +118,7 @@
     "@types/yargs": "17.0.13",
     "angular-server-side-configuration": "17.0.2",
     "angular-t9n": "17.0.0",
-    "browser-sync": "2.23.6",
+    "browser-sync": "3.0.2",
     "dgeni": "^0.4.14",
     "dgeni-packages": "^0.29.3",
     "esbuild": "0.19.11",
@@ -167,14 +167,14 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "5.2.2",
+    "typescript": "5.3.3",
     "yargs": "17.7.2"
   },
   "resolutions": {
-    "@angular/build-tooling/typescript": "5.2.2",
-    "@angular/ng-dev/typescript": "5.2.2",
+    "@angular/build-tooling/typescript": "5.3.3",
+    "@angular/ng-dev/typescript": "5.3.3",
     "browser-sync-client": "2.26.13",
-    "dgeni-packages/typescript": "5.2.2"
+    "dgeni-packages/typescript": "5.3.3"
   },
   "standard-version": {
     "types": [
