chore(esri-plugin): yarn integrity

--- a/src/components-examples/journey-maps/esri-plugin/BUILD.bazel
+++ b/src/components-examples/journey-maps/esri-plugin/BUILD.bazel
@@ -18,6 +18,8 @@ ng_module(
     deps = [
         "//src/angular/notification",
         "//src/journey-maps",
+        "@npm//@angular/common",
+        "@npm//@angular/core",
         "@npm//maplibre-gl",
     ],
 )
