--- a/src/angular/input/BUILD.bazel
+++ b/src/angular/input/BUILD.bazel
@@ -37,6 +37,7 @@ ng_test_library(
         "//src/angular/core/testing",
         "//src/angular/form-field",
         "@npm//@angular/cdk",
+        "@npm//@angular/common",
         "@npm//@angular/forms",
         "@npm//@angular/platform-browser",
     ],
