--- a/src/angular/sidebar/BUILD.bazel
+++ b/src/angular/sidebar/BUILD.bazel
@@ -68,6 +68,7 @@ ng_test_library(
     deps = [
         ":sidebar",
         "//src/angular/accordion",
+        "//src/angular/button",
         "//src/angular/core",
         "//src/angular/core/testing",
         "//src/angular/icon",
