refactor(angular/tabs): convert to standalone

--- a/src/angular/tabs/BUILD.bazel
+++ b/src/angular/tabs/BUILD.bazel
@@ -83,6 +83,7 @@ ng_test_library(
         "//src/angular/icon",
         "//src/angular/icon/testing",
         "@npm//@angular/cdk",
+        "@npm//@angular/common",
         "@npm//@angular/platform-browser",
         "@npm//rxjs",
     ],
