--- a/src/angular/breadcrumb/BUILD.bazel
+++ b/src/angular/breadcrumb/BUILD.bazel
@@ -42,10 +42,10 @@ ng_test_library(
     deps = [
         ":breadcrumb",
         "//src/angular/core/testing",
-        "//src/angular/icon",
         "//src/angular/icon/testing",
         "//src/angular/menu",
         "@npm//@angular/platform-browser",
+        "@npm//@angular/router",
     ],
 )
 
