chore(journey-maps): integrity

--- a/src/journey-maps/angular/BUILD.bazel
+++ b/src/journey-maps/angular/BUILD.bazel
@@ -62,6 +62,7 @@ sass_binary(
     src = "components/attribution/attribution.scss",
     deps = [
         ":angular_scss_lib",
+        "//src/angular:scss_lib",
     ],
 )
 
