feat(angular/tag): allow displaying an icon inside the tag

--- a/src/angular/tag/BUILD.bazel
+++ b/src/angular/tag/BUILD.bazel
@@ -20,6 +20,7 @@ ng_module(
         "//src/angular/badge",
         "//src/angular/checkbox",
         "//src/angular/core",
+        "//src/angular/icon",
         "@npm//@angular/cdk",
         "@npm//@angular/common",
         "@npm//@angular/core",
