--- a/src/angular/tag/BUILD.bazel
+++ b/src/angular/tag/BUILD.bazel
@@ -48,6 +48,7 @@ ng_test_library(
         ":tag",
         "//src/angular/badge",
         "//src/angular/checkbox",
+        "//src/angular/icon/testing",
         "@npm//@angular/forms",
         "@npm//@angular/platform-browser",
     ],
