--- a/.github/workflows/regenerate-images.yml
+++ b/.github/workflows/regenerate-images.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
         with:
+          fetch-depth: 0
           fetch-tags: true
       - name: 'Container: Login to GitHub Container Repository'
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io --username ${{ github.actor }} --password-stdin
