--- a/.github/workflows/regenerate-images.yml
+++ b/.github/workflows/regenerate-images.yml
@@ -27,8 +27,6 @@ jobs:
           majorVersion=$START_VERSION
           echo "Starting image regeneration with version $majorVersion"
 
-          git tag
-
           while : ; do
             version=$(git tag --sort=v:refname -l "$majorVersion.*.*" | tail -1)
             [[ "$version" != "" ]] || break
@@ -43,7 +41,8 @@ jobs:
               --tag tmp \
               --build-arg BASE="$image" \
               --file .github/Dockerfile.regenerate \
-              --target $target
+              --target $target \
+              .
             docker tag tmp "$image"
             docker push "$image"
           
