--- a/.github/workflows/regenerate-images.yml
+++ b/.github/workflows/regenerate-images.yml
@@ -17,11 +17,16 @@ jobs:
       IMAGE_URL: ghcr.io/sbb-design-systems/sbb-angular/showcase
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        with:
+          fetch-depth: 0
+          fetch-tags: true
       - name: 'Container: Login to GitHub Container Repository'
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io --username ${{ github.actor }} --password-stdin
       - name: Regenerate latest container images to keep them up to date
         run: |
           majorVersion=$START_VERSION
+          echo "Starting image regeneration with version $majorVersion"
+
           while : ; do
             version=$(git tag --sort=v:refname -l "$majorVersion.*.*" | tail -1)
             [[ "$version" != "" ]] || break
@@ -36,7 +41,8 @@ jobs:
               --tag tmp \
               --build-arg BASE="$image" \
               --file .github/Dockerfile.regenerate \
-              --target $target
+              --target $target \
+              .
             docker tag tmp "$image"
             docker push "$image"
           
