chore: update examples

--- a/src/components-examples/angular/sidebar/BUILD.bazel
+++ b/src/components-examples/angular/sidebar/BUILD.bazel
@@ -21,7 +21,9 @@ ng_module(
         "//src/angular/checkbox",
         "//src/angular/core",
         "//src/angular/core/testing",
+        "//src/angular/form-field",
         "//src/angular/icon",
+        "//src/angular/select",
         "//src/angular/sidebar",
         "@npm//@angular/cdk",
         "@npm//@angular/core",
