--- a/src/angular/pagination/BUILD.bazel
+++ b/src/angular/pagination/BUILD.bazel
@@ -25,6 +25,7 @@ ng_module(
         "@npm//@angular/core",
         "@npm//@angular/localize",
         "@npm//@angular/router",
+        "@npm//rxjs",
     ],
 )
 
