feat(journey-maps): yarn integrity

--- a/src/components-examples/journey-maps/angular/BUILD.bazel
+++ b/src/components-examples/journey-maps/angular/BUILD.bazel
@@ -20,11 +20,17 @@ ng_module(
         "//src/angular/checkbox",
         "//src/angular/core",
         "//src/angular/form-field",
+        "//src/angular/icon",
         "//src/angular/input",
         "//src/angular/notification",
         "//src/angular/radio-button",
         "//src/angular/select",
         "//src/angular/tabs",
+        "//src/components-examples/journey-maps/angular/journey-maps-map-navigation/journey-maps-map-navigation-example",
+        "//src/components-examples/journey-maps/angular/journey-maps-pois-markers/journey-maps-pois-markers-example",
+        "//src/components-examples/journey-maps/angular/journey-maps-routes-zones/journey-maps-routes-zones-example",
+        "//src/components-examples/journey-maps/angular/journey-maps-style-options/journey-maps-style-options-example",
+        "//src/components-examples/journey-maps/angular/journey-maps-ui-options/journey-maps-ui-options-example",
         "//src/journey-maps",
         "@npm//@angular/common",
         "@npm//@angular/core",
