docs(journey-maps): add several new examples for journey maps client (#2217)

--- a/src/components-examples/journey-maps/angular/BUILD.bazel
+++ b/src/components-examples/journey-maps/angular/BUILD.bazel
@@ -20,6 +20,7 @@ ng_module(
         "//src/angular/checkbox",
         "//src/angular/core",
         "//src/angular/form-field",
+        "//src/angular/icon",
         "//src/angular/input",
         "//src/angular/notification",
         "//src/angular/radio-button",
