--- a/src/components-examples/angular/tooltip/BUILD.bazel
+++ b/src/components-examples/angular/tooltip/BUILD.bazel
@@ -14,6 +14,7 @@ ng_module(
     assets = glob(["**/*.html"]),
     deps = [
         "//src/angular/button",
+        "//src/angular/checkbox",
         "//src/angular/form-field",
         "//src/angular/input",
         "//src/angular/tooltip",
