--- a/src/components-examples/angular/tooltip/BUILD.bazel
+++ b/src/components-examples/angular/tooltip/BUILD.bazel
@@ -16,6 +16,7 @@ ng_module(
         "//src/angular/button",
         "//src/angular/form-field",
         "//src/angular/input",
+        "//src/angular/select",
         "//src/angular/tooltip",
         "@npm//@angular/core",
         "@npm//@angular/forms",
