--- a/package.json
+++ b/package.json
@@ -52,16 +52,16 @@
   "homepage": "https://angular.app.sbb.ch",
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
-    "@angular/animations": "17.3.3",
+    "@angular/animations": "18.0.0-next.3",
     "@angular/cdk": "17.3.3",
-    "@angular/common": "17.3.3",
-    "@angular/core": "17.3.3",
-    "@angular/elements": "17.3.3",
-    "@angular/forms": "17.3.3",
-    "@angular/platform-browser": "17.3.3",
-    "@angular/platform-browser-dynamic": "17.3.3",
-    "@angular/platform-server": "17.3.3",
-    "@angular/router": "17.3.3",
+    "@angular/common": "18.0.0-next.3",
+    "@angular/core": "18.0.0-next.3",
+    "@angular/elements": "18.0.0-next.3",
+    "@angular/forms": "18.0.0-next.3",
+    "@angular/platform-browser": "18.0.0-next.3",
+    "@angular/platform-browser-dynamic": "18.0.0-next.3",
+    "@angular/platform-server": "18.0.0-next.3",
+    "@angular/router": "18.0.0-next.3",
     "@stackblitz/sdk": "1.9.0",
     "maplibre-gl": "3.6.2",
     "rxjs": "7.8.1",
@@ -70,17 +70,17 @@
   },
   "devDependencies": {
     "@actions/cache": "3.2.4",
-    "@angular-devkit/build-angular": "17.3.3",
-    "@angular-devkit/core": "17.3.3",
-    "@angular-devkit/schematics": "17.3.3",
+    "@angular-devkit/build-angular": "18.0.0-next.2",
+    "@angular-devkit/core": "18.0.0-next.2",
+    "@angular-devkit/schematics": "18.0.0-next.2",
     "@angular-devkit/schematics-cli": "17.3.3",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#bac9c1abe1e6ac1801fbbccb53353a1ed7126469",
     "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#9831b1aa2e40b8fdf1ebd44650797b5fd4ba08c3",
-    "@angular/cli": "17.3.3",
-    "@angular/compiler": "17.3.3",
-    "@angular/compiler-cli": "17.3.3",
-    "@angular/language-service": "17.3.3",
-    "@angular/localize": "17.3.3",
+    "@angular/cli": "18.0.0-next.2",
+    "@angular/compiler": "18.0.0-next.3",
+    "@angular/compiler-cli": "18.0.0-next.3",
+    "@angular/language-service": "18.0.0-next.3",
+    "@angular/localize": "18.0.0-next.3",
     "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#a8690b0870728efc1aea5eb6644e605e7d37eabc",
     "@babel/core": "7.24.4",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
@@ -119,7 +119,7 @@
     "@types/yargs": "17.0.13",
     "angular-server-side-configuration": "17.0.2",
     "angular-t9n": "17.0.0",
-    "browser-sync": "2.23.6",
+    "browser-sync": "3.0.2",
     "dgeni": "^0.4.14",
     "dgeni-packages": "^0.29.3",
     "esbuild": "0.20.2",
@@ -168,7 +168,7 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "5.3.2",
+    "typescript": "5.4.4",
     "yargs": "17.7.2"
   },
   "resolutions": {
