--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
     "@angular/animations": "18.0.0-next.3",
-    "@angular/cdk": "17.3.3",
+    "@angular/cdk": "18.0.0-next.3",
     "@angular/common": "18.0.0-next.3",
     "@angular/core": "18.0.0-next.3",
     "@angular/elements": "18.0.0-next.3",
