--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "17.4.1",
   "private": true,
   "engines": {
-    "node": ">=14.0.0 <19.0.0",
+    "node": "^18.19.1 || >=20.11.1",
     "yarn": "^1.22.17",
     "npm": "Please use Yarn instead of NPM to install dependencies. See: https://yarnpkg.com/lang/en/docs/install/"
   },
