--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "17.4.1",
   "private": true,
   "engines": {
-    "node": ">=14.0.0 <19.0.0",
+    "node": "^18.19.1 || >=20.11.1",
     "yarn": "^1.22.17",
     "npm": "Please use Yarn instead of NPM to install dependencies. See: https://yarnpkg.com/lang/en/docs/install/"
   },
@@ -52,16 +52,16 @@
   "homepage": "https://angular.app.sbb.ch",
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
-    "@angular/animations": "17.3.4",
-    "@angular/cdk": "17.3.3",
-    "@angular/common": "17.3.4",
-    "@angular/core": "17.3.4",
-    "@angular/elements": "17.3.4",
-    "@angular/forms": "17.3.4",
-    "@angular/platform-browser": "17.3.4",
-    "@angular/platform-browser-dynamic": "17.3.4",
-    "@angular/platform-server": "17.3.4",
-    "@angular/router": "17.3.4",
+    "@angular/animations": "18.0.0-next.4",
+    "@angular/cdk": "18.0.0-next.3",
+    "@angular/common": "18.0.0-next.4",
+    "@angular/core": "18.0.0-next.4",
+    "@angular/elements": "18.0.0-next.4",
+    "@angular/forms": "18.0.0-next.4",
+    "@angular/platform-browser": "18.0.0-next.4",
+    "@angular/platform-browser-dynamic": "18.0.0-next.4",
+    "@angular/platform-server": "18.0.0-next.4",
+    "@angular/router": "18.0.0-next.4",
     "@stackblitz/sdk": "1.9.0",
     "maplibre-gl": "3.6.2",
     "rxjs": "7.8.1",
@@ -70,17 +70,17 @@
   },
   "devDependencies": {
     "@actions/cache": "3.2.4",
-    "@angular-devkit/build-angular": "17.3.3",
-    "@angular-devkit/core": "17.3.3",
-    "@angular-devkit/schematics": "17.3.3",
-    "@angular-devkit/schematics-cli": "17.3.3",
+    "@angular-devkit/build-angular": "18.0.0-next.2",
+    "@angular-devkit/core": "18.0.0-next.2",
+    "@angular-devkit/schematics": "18.0.0-next.2",
+    "@angular-devkit/schematics-cli": "18.0.0-next.2",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#bac9c1abe1e6ac1801fbbccb53353a1ed7126469",
     "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#09c8533fafa946c91494a10d55cedc7bc0d5c47d",
-    "@angular/cli": "17.3.3",
-    "@angular/compiler": "17.3.4",
-    "@angular/compiler-cli": "17.3.4",
-    "@angular/language-service": "17.3.4",
-    "@angular/localize": "17.3.4",
+    "@angular/cli": "18.0.0-next.2",
+    "@angular/compiler": "18.0.0-next.4",
+    "@angular/compiler-cli": "18.0.0-next.4",
+    "@angular/language-service": "18.0.0-next.4",
+    "@angular/localize": "18.0.0-next.4",
     "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#43bb346fc88b7840149b6416ffdb1a5bb9a66b6e",
     "@babel/core": "7.24.4",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
@@ -119,7 +119,7 @@
     "@types/yargs": "17.0.13",
     "angular-server-side-configuration": "17.0.2",
     "angular-t9n": "17.0.0",
-    "browser-sync": "2.23.6",
+    "browser-sync": "3.0.2",
     "dgeni": "^0.4.14",
     "dgeni-packages": "^0.29.3",
     "esbuild": "0.20.2",
@@ -168,14 +168,14 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "5.3.2",
+    "typescript": "5.4.4",
     "yargs": "17.7.2"
   },
   "resolutions": {
-    "@angular/build-tooling/typescript": "5.3.2",
-    "@angular/ng-dev/typescript": "5.3.2",
+    "@angular/build-tooling/typescript": "5.4.4",
+    "@angular/ng-dev/typescript": "5.4.4",
     "browser-sync-client": "2.26.13",
-    "dgeni-packages/typescript": "5.3.2"
+    "dgeni-packages/typescript": "5.4.4"
   },
   "standard-version": {
     "types": [
