fix: manual resolution

--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "scripts": {
     "postinstall": "patch-package --patch-dir tools/postinstall/patches && node tools/postinstall/apply-patches.js",
-    "build": "ts-node-script ./scripts/build.ts",
+    "build": "tsx ./scripts/build.ts",
     "build:schematics": "node tools/schematics/esbuild.js",
-    "build:i18n": "ts-node-script ./scripts/build.ts i18n",
+    "build:i18n": "tsx ./scripts/build.ts i18n",
     "generate:bazel": "ng g .:bazel",
     "generate:symbols": "ng g .:extractSymbols",
-    "generate:icon-list": "ts-node-script ./scripts/update-icon-names.ts",
+    "generate:icon-list": "tsx ./scripts/update-icon-names.ts",
     "bazel": "bazelisk",
     "bazel:buildifier": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" ! -path \"*/.git/*\" | xargs buildifier -v",
     "bazel:format-lint": "yarn -s bazel:buildifier --lint=warn --mode=check",
-    "bazel:cache": "ts-node-script -T ./scripts/cache.ts",
+    "bazel:cache": "tsx ./scripts/cache.ts",
     "start": "ibazel run //src/showcase:devserver",
     "start:prod": "ibazel run //src/showcase:prodserver",
     "start:journey-maps-wc": "ibazel run //src/journey-maps/web-component:devserver",
@@ -168,6 +168,7 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-plugin-prettier": "2.3.0",
+    "tsx": "4.9.3",
     "typescript": "5.4.4",
     "yargs": "17.7.2"
   },
