--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "scripts": {
     "postinstall": "patch-package --patch-dir tools/postinstall/patches && node tools/postinstall/apply-patches.js",
-    "build": "tsx ./scripts/build.ts",
+    "build": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/build.mts",
     "build:schematics": "node tools/schematics/esbuild.js",
-    "build:i18n": "tsx ./scripts/build.ts i18n",
+    "build:i18n": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/build.mts i18n",
     "generate:bazel": "ng g .:bazel",
     "generate:symbols": "ng g .:extractSymbols",
-    "generate:icon-list": "tsx ./scripts/update-icon-names.ts",
+    "generate:icon-list": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only ./scripts/update-icon-names.mts",
     "bazel": "bazelisk",
     "bazel:buildifier": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" ! -path \"*/.git/*\" | xargs buildifier -v",
     "bazel:format-lint": "yarn -s bazel:buildifier --lint=warn --mode=check",
-    "bazel:cache": "tsx ./scripts/cache.ts",
+    "bazel:cache": "node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only  ./scripts/cache.ts",
     "start": "ibazel run //src/showcase:devserver",
     "start:prod": "ibazel run //src/showcase:prodserver",
     "start:journey-maps-wc": "ibazel run //src/journey-maps/web-component:devserver",
@@ -116,6 +116,7 @@
     "@types/node": "18.19.32",
     "@types/sass": "1.45.0",
     "@types/send": "0.17.4",
+    "@types/shelljs": "^0.8.15",
     "@types/yargs": "17.0.13",
     "angular-server-side-configuration": "17.0.2",
     "angular-t9n": "17.0.0",
@@ -168,7 +169,6 @@
     "tslint-config-prettier": "1.18.0",
     "tslint-consistent-codestyle": "1.16.0",
     "tslint-plugin-prettier": "2.3.0",
-    "tsx": "4.9.3",
     "typescript": "5.4.4",
     "yargs": "17.7.2"
   },
