--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "outDir": "../dist/dev-infra-scripts",
-    "moduleResolution": "node",
-    "module": "commonjs",
+    "module": "Node16",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2015",
-    "lib": ["es2018"],
+    "target": "es2020",
+    "lib": ["es2020"],
     "strict": true
-  },
-  "include": ["*.ts"]
+  }
 }
