feat(angular/sidebar): make sidebar collapsible

--- a/src/components-examples/angular/sidebar/BUILD.bazel
+++ b/src/components-examples/angular/sidebar/BUILD.bazel
@@ -23,6 +23,7 @@ ng_module(
         "//src/angular/core/testing",
         "//src/angular/form-field",
         "//src/angular/icon",
+        "//src/angular/input",
         "//src/angular/select",
         "//src/angular/sidebar",
         "@npm//@angular/cdk",
