--- a/.github/workflows/maintenance-changelog.yml
+++ b/.github/workflows/maintenance-changelog.yml
@@ -56,7 +56,7 @@ jobs:
         if: needs.cherry_pick.outputs.failed_release_version
       - name: Update maintenance issue
         if: needs.cherry_pick.outputs.failed_release_version
-        run: yarn ts-node scripts/update-maintenance-issue.ts
+        run: node --no-warnings=ExperimentalWarning --loader ts-node/esm/transpile-only scripts/update-maintenance-issue.mts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FAILED_RELEASE: ${{ needs.cherry_pick.outputs.failed_release_version }}
