docs: remove Oauth documentation part
We now recommend using `angular-auth-oidc-client` instead of `angular-oauth2-oidc`. As discussed internally, we're therefore removing this documentation from the SBB Angular showcase. The new documentation can be found in the CLEW confluence.

--- a/src/showcase/assets/BUILD.bazel
+++ b/src/showcase/assets/BUILD.bazel
@@ -55,7 +55,7 @@ genrule(
           "$(execpath stack-blitz/src/app/sbb.module.ts)" \
           "@sbb-esta/angular" \
           %s
-    """ % " ".join([ep for ep in ANGULAR_ENTRYPOINTS if ep != "core" and ep != "i18n" and ep != "oauth"]),
+    """ % " ".join([ep for ep in ANGULAR_ENTRYPOINTS if ep != "core" and ep != "i18n"]),
     output_to_bindir = True,
     tools = ["//tools/stack-blitz-module-template:bazel-bin"],
 )
