--- a/src/showcase/assets/stack-blitz/angular.json
+++ b/src/showcase/assets/stack-blitz/angular.json
@@ -79,10 +79,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "example-app:build:production"
+              "buildTarget": "example-app:build:production"
             },
             "development": {
-              "browserTarget": "example-app:build:development"
+              "buildTarget": "example-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -90,7 +90,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "example-app:build"
+            "buildTarget": "example-app:build"
           }
         },
         "test": {
@@ -119,6 +119,5 @@
         }
       }
     }
-  },
-  "defaultProject": "example-app"
+  }
 }
