--- a/src/showcase/assets/stack-blitz/package.json
+++ b/src/showcase/assets/stack-blitz/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
-    "@sbb-esta/angular": "${version}",
-    "@sbb-esta/journey-maps": "${version}",
+    "@sbb-esta/angular": "^${version}",
+    "@sbb-esta/journey-maps": "^${version}",
     "maplibre-gl": "^3.6.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
