--- a/.github/workflows/preview-deployment.yml
+++ b/.github/workflows/preview-deployment.yml
@@ -22,7 +22,7 @@ jobs:
     env:
       PR_NUMBER: ${{ github.event.workflow_run.pull_requests[0].number }}
       IMAGE_REPO: ghcr.io/${{ github.repository }}/showcase-preview
-      IMAGE_TAG: rev-${{ ithub.event.workflow_run.head_sha }}
+      IMAGE_TAG: rev-${{ github.event.workflow_run.head_sha }}
       IMAGE_PR_TAG: preview-pr${{ github.event.workflow_run.pull_requests[0].number }}
       ALLOWED_EXTENSIONS: css, gitignore, gitkeep, html, ico, jpg, js, json, png, scss, stackblitzrc, svg, ts
     steps:
@@ -72,7 +72,7 @@ jobs:
             core.error(`No artifact found`);
           }
     - run: ls -llR ./dist/releases
-    
+
     - name: Create GitHub Deployment
       uses: actions/github-script@v7
       with:
