--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
           }
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "@angular/build:extract-i18n",
           "options": {
             "buildTarget": "angular-showcase:build"
           }
