--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "@actions/cache": "3.2.4",
     "@angular-devkit/core": "19.0.0-next.7",
     "@angular-devkit/schematics": "19.0.0-next.7",
-    "@angular-devkit/schematics-cli": "18.2.5",
+    "@angular-devkit/schematics-cli": "19.0.0-next.7",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#9e6140d1eef8ddf7113d00738f603e9cc3c310f1",
     "@angular/build": "^19.0.0-next.7",
     "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#7d4e81afadbc710ebad746b9bed1cd69de57d1c5",
@@ -101,7 +101,7 @@
     "@rollup/plugin-commonjs": "23.0.4",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "12.1.0",
-    "@schematics/angular": "18.2.5",
+    "@schematics/angular": "19.0.0-next.7",
     "@types/browser-sync": "2.29.0",
     "@types/events": "3.0.3",
     "@types/fs-extra": "11.0.4",
