--- a/package.json
+++ b/package.json
@@ -52,36 +52,36 @@
   "homepage": "https://angular.app.sbb.ch",
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
-    "@angular/animations": "19.0.0-next.6",
-    "@angular/cdk": "19.0.0-next.5",
-    "@angular/common": "19.0.0-next.6",
-    "@angular/core": "19.0.0-next.6",
-    "@angular/elements": "19.0.0-next.6",
-    "@angular/forms": "19.0.0-next.6",
-    "@angular/platform-browser": "19.0.0-next.6",
-    "@angular/platform-browser-dynamic": "19.0.0-next.6",
-    "@angular/platform-server": "19.0.0-next.6",
-    "@angular/router": "19.0.0-next.6",
+    "@angular/animations": "18.2.5",
+    "@angular/cdk": "18.2.5",
+    "@angular/common": "18.2.5",
+    "@angular/core": "18.2.5",
+    "@angular/elements": "18.2.5",
+    "@angular/forms": "18.2.5",
+    "@angular/platform-browser": "18.2.5",
+    "@angular/platform-browser-dynamic": "18.2.5",
+    "@angular/platform-server": "18.2.5",
+    "@angular/router": "18.2.5",
     "@stackblitz/sdk": "1.11.0",
     "maplibre-gl": "3.6.2",
     "rxjs": "7.8.1",
     "tslib": "2.7.0",
-    "zone.js": "0.15.0"
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
     "@actions/cache": "3.2.4",
-    "@angular-devkit/core": "19.0.0-next.7",
-    "@angular-devkit/schematics": "19.0.0-next.7",
-    "@angular-devkit/schematics-cli": "19.0.0-next.7",
+    "@angular-devkit/build-angular": "18.2.5",
+    "@angular-devkit/core": "18.2.5",
+    "@angular-devkit/schematics": "18.2.5",
+    "@angular-devkit/schematics-cli": "18.2.5",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#9e6140d1eef8ddf7113d00738f603e9cc3c310f1",
-    "@angular/build": "^19.0.0-next.7",
-    "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#f46197abd29ffd084e616af9b5a66d45193769e6",
-    "@angular/cli": "19.0.0-next.7",
-    "@angular/compiler": "19.0.0-next.6",
-    "@angular/compiler-cli": "19.0.0-next.6",
-    "@angular/language-service": "19.0.0-next.6",
-    "@angular/localize": "19.0.0-next.6",
-    "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#39e1a11a2dfafc1284048120362b3a48d7f9a15b",
+    "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#7d4e81afadbc710ebad746b9bed1cd69de57d1c5",
+    "@angular/cli": "18.2.5",
+    "@angular/compiler": "18.2.5",
+    "@angular/compiler-cli": "18.2.5",
+    "@angular/language-service": "18.2.5",
+    "@angular/localize": "18.2.5",
+    "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#cbc57fc701684aafa1d0a2df171b107b67b1b2b2",
     "@babel/core": "7.25.2",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@babel/traverse": "7.25.6",
@@ -101,7 +101,7 @@
     "@rollup/plugin-commonjs": "23.0.4",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "12.1.0",
-    "@schematics/angular": "19.0.0-next.7",
+    "@schematics/angular": "18.2.5",
     "@types/browser-sync": "2.29.0",
     "@types/events": "3.0.3",
     "@types/fs-extra": "11.0.4",
