chore: update angular dependencies to latest next version

--- a/package.json
+++ b/package.json
@@ -52,35 +52,35 @@
   "homepage": "https://angular.app.sbb.ch",
   "schematics": "./tools/schematics/collection.json",
   "dependencies": {
-    "@angular/animations": "18.2.8",
-    "@angular/cdk": "18.2.8",
-    "@angular/common": "18.2.8",
-    "@angular/core": "18.2.8",
-    "@angular/elements": "18.2.8",
-    "@angular/forms": "18.2.8",
-    "@angular/platform-browser": "18.2.8",
-    "@angular/platform-browser-dynamic": "18.2.8",
-    "@angular/platform-server": "18.2.8",
-    "@angular/router": "18.2.8",
+    "@angular/animations": "19.0.0-next.8",
+    "@angular/cdk": "19.0.0-next.8",
+    "@angular/common": "19.0.0-next.8",
+    "@angular/core": "19.0.0-next.8",
+    "@angular/elements": "19.0.0-next.8",
+    "@angular/forms": "19.0.0-next.8",
+    "@angular/platform-browser": "19.0.0-next.8",
+    "@angular/platform-browser-dynamic": "19.0.0-next.8",
+    "@angular/platform-server": "19.0.0-next.8",
+    "@angular/router": "19.0.0-next.8",
     "@stackblitz/sdk": "1.11.0",
     "maplibre-gl": "3.6.2",
     "rxjs": "7.8.1",
     "tslib": "2.7.0",
-    "zone.js": "0.14.3"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
     "@actions/cache": "3.2.4",
-    "@angular-devkit/build-angular": "18.2.8",
-    "@angular-devkit/core": "18.2.8",
-    "@angular-devkit/schematics": "18.2.8",
-    "@angular-devkit/schematics-cli": "18.2.8",
+    "@angular-devkit/build-angular": "19.0.0-next.9",
+    "@angular-devkit/core": "19.0.0-next.9",
+    "@angular-devkit/schematics": "19.0.0-next.9",
+    "@angular-devkit/schematics-cli": "19.0.0-next.9",
     "@angular/bazel": "https://github.com/angular/bazel-builds.git#9e6140d1eef8ddf7113d00738f603e9cc3c310f1",
     "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#b30ce317c1c6dd183258fff554777e8582d6f505",
-    "@angular/cli": "18.2.8",
-    "@angular/compiler": "18.2.8",
-    "@angular/compiler-cli": "18.2.8",
-    "@angular/language-service": "18.2.8",
-    "@angular/localize": "18.2.8",
+    "@angular/cli": "19.0.0-next.9",
+    "@angular/compiler": "19.0.0-next.8",
+    "@angular/compiler-cli": "19.0.0-next.8",
+    "@angular/language-service": "19.0.0-next.8",
+    "@angular/localize": "19.0.0-next.8",
     "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#978df41c469f0d853ec8cd7fc9289e67b001b38d",
     "@babel/core": "7.25.8",
     "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
@@ -101,7 +101,7 @@
     "@rollup/plugin-commonjs": "23.0.4",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "12.1.1",
-    "@schematics/angular": "18.2.8",
+    "@schematics/angular": "19.0.0-next.9",
     "@types/browser-sync": "2.29.0",
     "@types/events": "3.0.3",
     "@types/fs-extra": "11.0.4",
