--- a/src/angular/captcha/BUILD.bazel
+++ b/src/angular/captcha/BUILD.bazel
@@ -14,6 +14,7 @@ ng_module(
     ),
     deps = [
         "//src/angular/core",
+        "@npm//@angular/cdk",
         "@npm//@angular/common",
         "@npm//@angular/core",
         "@npm//@angular/forms",
