--- a/src/angular/form-field/BUILD.bazel
+++ b/src/angular/form-field/BUILD.bazel
@@ -17,6 +17,7 @@ ng_module(
     deps = [
         "//src:dev_mode_types",
         "//src/angular/core",
+        "@npm//@angular/cdk",
         "@npm//@angular/core",
         "@npm//@angular/forms",
         "@npm//rxjs",
