--- a/src/journey-maps/angular/BUILD.bazel
+++ b/src/journey-maps/angular/BUILD.bazel
@@ -22,6 +22,7 @@ ng_module(
         ":components/basemap-switch/basemap-switch.css",
         ":components/geolocate-button/geolocate-button.css",
         ":components/home-button/home-button.css",
+        ":components/compass-button/compass-button.css",
         ":components/leit-poi/leit-poi.css",
         ":components/level-switch/level-switch-horizontal.css",
         ":components/level-switch/level-switch.css",
@@ -85,6 +86,14 @@ sass_binary(
 sass_binary(
     name = "components_home_button_home_button_scss",
     src = "components/home-button/home-button.scss",
+    deps = [
+        ":angular_scss_lib",
+    ],
+)
+
+sass_binary(
+    name = "components_compass_button_compass_button_scss",
+    src = "components/compass-button/compass-button.scss",
     deps = [
         ":angular_scss_lib",
     ],
