fix(build): fix preview deployment
Ensure all required commit status checks pass before creating a deployment by calling `github.rest.repos.createDeployment()` and ignore irrelevant checks.

--- a/.github/workflows/preview-deployment.yml
+++ b/.github/workflows/preview-deployment.yml
@@ -83,6 +83,7 @@ jobs:
             ...payload,
             ref: context.payload.workflow_run.head_sha,
             auto_merge: false,
+            required_contexts: ['build', 'packages', 'showcase']
           });
           await github.rest.repos.createDeploymentStatus({
             ...payload,
